--- a/615.html
+++ b/615.html
@@ -14,16 +14,14 @@
     <div class="container mt-38 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
         <section class="w-full">
             <br><br><br>
-             <h2 id="work" class="secondary-title">TIMINGS</h2>
-             <p class="section-paragraph"><b>For Station Meta</b></p>
-            
-                    
+             <h2 id="work" class="secondary-title">TRAINS</h2>
+             <p class="section-paragraph"><b>Meta at 6:15 AM</b></p>
                 <ul type="disc" >
-      <li class="lii"><a href="615.html" target="right" >6:15am </a></li><br>
-      <li class="lii"><a href="930.html" target="right" >9:30am</a></li><br>
-      <li class="lii"><a href="230.HTML" target="right" >2:30pm </a></li><br>
-      <li class="lii"><a href="530.HTML" target="right">5:30pm </a></li><br>
+      <li class="lii">6:43am->22998 SHRI GANGANAGAR- JHALAWAR</li><br>
+      <li class="lii">7:23am->14814 BHOPAL- JODHPUR</li><br>
+      <li class="lii">7:37am->19721 JAIPUR- BAYANA </li>    <br>
     </ul>
+
 </div>
 </body>
 </html>
