--- a/days.html
+++ b/days.html
@@ -10,13 +10,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="forma.css">
     </head>
-<body>
+<body class="bg-body text-white font-poppins pb-12">
      <a href="time.html" target="m">
 <!-- META -->
 <div class="container mt-38 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
      <section class="w-full">
-          <h2 id="work" class="secondary-titl">Meta Section</h2>
-          <p class="section-paragraph"><b>Welcome to Our meta Section</b>.</p>
+          <br><br><br>
+          <h2 id="work" class="secondary-title">META SECTION</h2>
+          <p class="section-paragraph"><b>Welcome to our Meta Section</b>.</p>
 
        <div class="">
          <button class="button" onclick="time.html" ><b>SUNDAY</b></button></br>
