--- a/metasection.html
+++ b/metasection.html
@@ -1,8 +1,7 @@
 <html>
-    <frameset cols="33.3%,33.3%,33.3%">
-<frame src="days.html" name="left"></frame>
-    <frame  name="m"></frame>
-    
-    <frame  name="right"></frame>
+    <frameset cols="20%,20%,60%">
+    <frame src="days.html" name="left" style="background-color: rgb(23,23,31);"></frame>
+    <frame  name="m" style="background-color: rgb(23,23,31);"></frame>
+    <frame  name="right" style="background-color: rgb(23,23,31);"></frame>
 </frameset>
     </html>
